--- a/CrunchFitness.html
+++ b/CrunchFitness.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
-
+    <div class="container form">
+        <form class="col-sm-6 col-sm-offset-3">
+            <div class="form-group">
+                <label>First Name:</label>
+                <input type="text" class="form-control" name="firstName" />
+            </div>
+            <div class="form-group">
+                <label>Last Name:</label>
+                <input type="text" class="form-control" name="lastName" />
+            </div>
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="email" class="form-control" name="email" />
+            </div>
+            <div class="form-group">
+                <label>Phone Number:</label>
+                <input type="text" class="form-control" name="phoneNumber" />
+            </div>
+            <div>
+                <label>Location:</label>
+                <select>
+                <option>Los Angeles</option>
+                <option>New York</option>
+                <option>Seattle</option>
+            </select>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
     <script type="text/javasript" src="Scripts/jquery-1.10.2.min.js"></script>
 </body>
 
