removed unused scripts

--- a/CrunchFitness.html
+++ b/CrunchFitness.html
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label>Phone Number:</label>
-                <input type="text" class="form-control" name="phoneNumber" />
+                <input type="tel" class="form-control" name="phoneNumber" />
             </div>
             <div>
                 <label>Location:</label>
@@ -46,7 +46,6 @@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
-    <script type="text/javasript" src="Scripts/jquery-1.10.2.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <script>
@@ -55,7 +54,8 @@
 
             var backgrounds = new Array(
                 'url(Content/Image1.jpg)', 'url(Content/lungefront_Crunch2.jpg)',
-                'url(Content/miles-of-cardio.jpg)', 'url(Content/StrengthMachines.jpg)', 'url(Content/camp_crunch-mx.jpg)'
+                'url(Content/miles-of-cardio.jpg)', 'url(Content/StrengthMachines.jpg)', 
+                'url(Content/camp_crunch-mx.jpg)'
             );
 
             var current = 0;
